--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 title: Contact
 description: Send us a message to find out more!
 map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
+  latitude: -82.998029
+  longitude: 39.963399
+  address: "Columbus, OH, USA"
   zoom: 13
 image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 ---
@@ -21,7 +21,7 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 <section class="pad">
 	<div class="text-container contact-box">
 		<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-			<input type="hidden" name="_to" value="support@cloudcannon.com">
+			<input type="hidden" name="_to" value="support@cervant.io">
 			<input type="text" name="_gotcha" style="display: none;">
 
 			<label for="name">Name</label>
@@ -35,17 +35,17 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 
 			<input type="submit" value="Send Message">
 		</form>
-
+<!-- 
 		<div class="contact-details">
 			<h3>Address</h3>
 			<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 
 			<h3>Email</h3>
-			<p class="editable"><a href="mailto:support@example.com">support@example.com</a></p>
-		</div>
+			<p class="editable"><a href="mailto:support@cervant.io">support@cervant.io</a></p>
+		</div> -->
 	</div>
 </section>
-
+<!-- 
 <div class="map" id="map"></div>
 
 <script>
@@ -77,4 +77,4 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 		});
 	}
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_javascript_api_key }}&amp;callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_javascript_api_key }}&amp;callback=initMap"></script> -->
