--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 title: Home
 description: The latest app to help you find new friends with common interests.
 image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
-bottom_image: https://unsplash.it/2000/1322?a=.png
+bottom_image: https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1353&q=80
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Make a new friend today</h1>
-			<p class="subtext editable">Frisco helps you find new friends with common interests. Search for a new Tennis partner, find a baking side-kick or befriend a new drinking buddy.</p>
-			<div class="cta button alt"><a href="#">Join Now</a></div>
+			<h1 class="editable">Digital Experience</h1>
+			<p class="subtext editable">Cervant offers end to end digital experience to business aht ecustomers.</p>
+			<div class="cta button alt"><a href="/contact/">Contact Us</a></div>
 		</div>
 	</div>
 	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
@@ -20,11 +20,13 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info" id="learn-more">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Introduce yourself</h2>
-				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
+				<h2 class="editable">Digital Transformation</h2>
+				<p class="editable">
+					Want a better way to interact with your users and customers? Cervant offers unique set of services and experience in improving your customer experience and better address customer needs.					
+				</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1300&h=650&q=80" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
@@ -32,11 +34,13 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Pick your interests</h2>
-				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
+				<h2 class="editable">Process Automation</h2>
+				<p class="editable">McKinsey estimates that about half of work could be automated. Imagine how much more work your team could complete with twice as much time, and no dull data entry bogging them down.
+
+						Automation has moved from being a luxury to a necessity, with Forrester predicting that it can cut operating costs by up to 90%. With your costs down, automation leaves you with budget to spend on innovation over maintenance.</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="https://images.unsplash.com/photo-1516110833967-0b5716ca1387?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1300&h=650&q=80" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
@@ -44,11 +48,11 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Swipe and go</h2>
+				<h2 class="editable">Infrastructure Management</h2>
 				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="https://images.unsplash.com/photo-1506399558188-acca6f8cbf41?ixlib=rb-1.2.1&auto=format&fit=crop&w=1300&h=650&q=80" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
@@ -56,9 +60,9 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %})">
 		<div class="inner-hero text-container">
 			<div class="hero-text-container">
-				<h2 class="editable">Find your buddy today</h2>
-				<p class="subtext editable">It's free, fun and an exciting way to meet new people.</p>
-				<div class="cta button alt"><a href="#">Join Now</a></div>
+				<h2 class="editable">Contact us today</h2>
+				<p class="subtext editable">Let us know how we can help you with advancing your business goals</p>
+				<div class="cta button alt"><a href="/contact/">Contact Us</a></div>
 			</div>
 		</div>
 	</section>
