--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@ bottom_image: https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixlib
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Digital Experience</h1>
-			<p class="subtext editable">Cervant offers end to end digital experience to business aht ecustomers.</p>
+			<h1 class="editable">Digital Transformation</h1>
+			<p class="subtext editable">
+				<p>MIT Sloan Management Review and Deloitte’s1 2015 global study of digital business found that maturing digital businesses are focused on integrating digital technologies, such as social, mobile, analytics and cloud, in the service of transforming how their businesses work. Less-mature digital businesses are focused on solving discrete business problems with individual digital technologies.</p>
+				<p>Cervant has helped several customers across a variety of industries to successfully transform their businesses, by effectively leveraging and orchestrating cutting edge digital technologies to enhance essential enterprise services and customer experience.</p>				
+			</p>
 			<div class="cta button alt"><a href="/contact/">Contact Us</a></div>
 		</div>
 	</div>
@@ -22,7 +25,7 @@ bottom_image: https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixlib
 			<div class="text">
 				<h2 class="editable">Digital Transformation</h2>
 				<p class="editable">
-					Want a better way to interact with your users and customers? Cervant offers unique set of services and experience in improving your customer experience and better address customer needs.					
+					Our unique methodologies enable a structured approach to achieve the required Transformation with a clear road map and a joint vision. Ampcus’ Digital experts help develop a robust and practical approach to rapidly innovate, disrupt, and accelerate its customer’s business to scale.
 				</p>
 			</div>
 			<div class="image">
