--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ bottom_image: https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixlib
 			<div class="text">
 				<h2 class="editable">Digital Transformation</h2>
 				<p class="editable">
-					Our unique methodologies enable a structured approach to achieve the required Transformation with a clear road map and a joint vision. Ampcus’ Digital experts help develop a robust and practical approach to rapidly innovate, disrupt, and accelerate its customer’s business to scale.
+					Our unique methodologies enable a structured approach to achieve the required Transformation with a clear road map and a joint vision. Cervant’s Digital experts help develop a robust and practical approach to rapidly innovate, disrupt, and accelerate its customer’s business to scale.
 				</p>
 			</div>
 			<div class="image">
