--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ bottom_image: https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixlib
 		<div class="container flex">
 			<div class="text">
 				<h2 class="editable">Infrastructure Management</h2>
-				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+				<p class="editable">As enterprises scale their IT infrastructure to support business growth, managing global networks, databases and applications becomes a daunting task which can overwhelm internal resources and significantly decrease productivity and growth. Cervant provides comprehensive set of services to help organizations optimize critical IT staff. We offer customers get the technology, reliability and control that their business demands without jeopardizing strategic priorities.</p>
 			</div>
 			<div class="image">
 				<img class="editable" src="https://images.unsplash.com/photo-1506399558188-acca6f8cbf41?ixlib=rb-1.2.1&auto=format&fit=crop&w=1300&h=650&q=80" alt="Screenshot" />
