--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ map:
   longitude: 39.963399
   address: "Columbus, OH, USA"
   zoom: 13
-image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
+image: https://images.unsplash.com/photo-1498805983167-a523078d762c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1385&q=80
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
