--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ bottom_image: https://images.unsplash.com/photo-1423666639041-f56000c27a9a?ixlib
 		<div class="hero-text-container">
 			<h1 class="editable">Digital Transformation</h1>
 			<p class="subtext editable">
-				<p>MIT Sloan Management Review and Deloitte’s 2015 global study of digital business found that maturing digital businesses are focused on integrating digital technologies, such as social, mobile, analytics and cloud, in the service of transforming how their businesses work. Less-mature digital businesses are focused on solving discrete business problems with individual digital technologies.</p>
+				<p>Digital Transformation is the key to survival for many organizations. Here is how Cervant can help transform...</p>
 			</p>
-			<div class="cta button alt"><a href="/contact/">Contact Us</a></div>
+			<div class="cta button alt"><a href="/digital/">Learn More</a></div>
 		</div>
 	</div>
 	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
