--- a/digital.html
+++ b/digital.html
@@ -15,18 +15,18 @@ image: https://images.unsplash.com/photo-1427751840561-9852520f8ce8?ixlib=rb-1.2
 
 <section class="pad">
 	<div class="container">
-<p>MIT Sloan Management Review and Deloitte’s 2015 global study of digital business found that maturing digital businesses are focused on integrating digital technologies, such as social, mobile, analytics and cloud, in the service of transforming how their businesses work. Less-mature digital businesses are focused on solving discrete business problems with individual digital technologies.</p>
-
-<p>Cervant has helped several customers across a variety of industries to successfully transform their businesses, by effectively leveraging and orchestrating cutting edge digital technologies to enhance essential enterprise services and customer experience.</p>
-
-The key elements cervant focuses exceptionally well are:
-
- * End User/Customer Experience
- * Ease of Operations & Flexibility
- * Organizational shift in culture
- * Technology Expertise
- * Leadership
- 
-<p>Contact Cervant on how we can help you in each of the above mentioned focus areas.</p>
+		<p>MIT Sloan Management Review and Deloitte’s 2015 global study of digital business found that maturing digital businesses are focused on integrating digital technologies, such as social, mobile, analytics and cloud, in the service of transforming how their businesses work. Less-mature digital businesses are focused on solving discrete business problems with individual digital technologies.</p>
+		<p>Cervant has helped several customers across a variety of industries to successfully transform their businesses, by effectively leveraging and orchestrating cutting edge digital technologies to enhance essential enterprise services and customer experience.</p>
+		<p>The key elements cervant focuses exceptionally well are:</p>
+		<p>
+		<ul>
+			<li>End User/Customer Experience</li>
+			<li>Ease of Operations & Flexibility</li>
+			<li>Organizational shift in culture</li>
+			<li>Technology Expertise</li>
+			<li>Leadership</li>
+		</ul>
+		</p>
+		<p>Contact Cervant on how we can help you in each of the above mentioned focus areas.</p>
 </div>
 </section>
