--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@ image: https://images.unsplash.com/photo-1498805983167-a523078d762c?ixlib=rb-1.2
 
 <section class="pad">
 	<div class="text-container contact-box">
-		<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
+		<form action="https://formspree.io/hellocervant@gmail.com" method="post" class="contact-form">
 			<input type="hidden" name="_to" value="support@cervant.io">
 			<input type="text" name="_gotcha" style="display: none;">
 
